--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -317,4 +317,31 @@
   publisher={IEEE}
 }
 
+@inproceedings{he2016deep,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
+
+@inproceedings{chollet2017xception,
+  title={Xception: Deep learning with depthwise separable convolutions},
+  author={Chollet, Fran{\c{c}}ois},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1251--1258},
+  year={2017}
+}
+
+@online{glowtts,
+ author  = {Coqui},
+ title   = {Glow TT},
+ url     = {https://tts.readthedocs.io/en/latest/models/glow_tts.html}
+ }
+
+@online{vits,
+ author  = {Coqui},
+ title   = {VITS},
+ url     = {https://tts.readthedocs.io/en/latest/models/vits.html}
+ }
 
