--- a/thesis-main/document/FrontMatter/Abstract.tex
+++ b/thesis-main/document/FrontMatter/Abstract.tex
@@ -1,7 +1,7 @@
 \begin{resumen}
-	Resumen en español
+Este Trabajo de Diploma muestra los resultados de la investigación realizada para encontrar un método de síntesis de voz, en español para adaptar a la voz cubana. La investigación se centra en diversas cuestiones. La primera, es el estado de la síntesis de voz mediante aprendizaje profundo en la actualidad, y la complejidad para poder generar una voz artificial con este método. Se eligen las herramientas para llevar a cabo esta tarea, así como los modelos Tacotron2 y VITS con el mismo fin, un sistema de dos etapas y un modelo de extremo a extremo respectivamente. Se construye una base de datos con un hablante cubano para cumplir con el requisito del acento cubano en el sistema de conversión de texto a voz que se persigue desarrollar. Se experimenta mediante entrenamientos y reentrenamientos de difentes variantes de los modelos antes mencionados, especialmente del modelo VITS, pues el modelo Tacotron2 arroja resultados desanlentadores desde las primeras etapas. Por último se realiza una evaluación de los resultados donde se concluye que la mayor importancia para el cumplimiento satisfactorio del objetivo principal, que es el desarrollo de un sintetizador de voz en español, adaptado a la voz cubana, está en los conjuntos de datos para el entrenamiento de modelos. 
 \end{resumen}
 
 \begin{abstract}
-	Resumen en inglés
+	This thesis shows the results of the research carried out to find a method of voice synthesis, in Spanish to adapt to Cuban accent. The research focuses on a variaty of issues. First, the recent studies on the field of text to speech synthesis using deep learning, and the complexity of being able to generate an artificial voice through this method. It was necesary the selection of tools to carry out this task, as well as DNN-based model such as Tacotron2 and VITS model: a two-stage and an end-to-end model respectively. A database with a Cuban speaker is built to meet the Cuban accent requirement in the aimed text-to-speech conversion system. There were experiments conducted through training and fine-tuninf of different variants of the previously mentioned models, especially the VITS model, since the Tacotron2 model yields discouraging results from early stages. Finally, an evaluation of the results is carried out, where it is concluded that the most important aspect for the satisfactory fulfillment of the main objective, which is the development of a voice synthesizer in Spanish, adapted to the Cuban voice, is in the data sets for the model training.
 \end{abstract}
