--- a/thesis-main/document/MainMatter/Background.tex
+++ b/thesis-main/document/MainMatter/Background.tex
@@ -58,8 +58,6 @@ La primera arquitectura basada en transformadores se introdujo en 2018 y reempla
 
 FastSpeech, una novedosa red de avance basada en Transformer para generar espectrogramas de mel en paralelo para TTS; toma como entrada una secuencia de texto(fonema) y genera espectrogramas de mel de forma no autorregresiva. Adopta una red feed-forward basada en la autoatención\footnote{La autoatención permite a una red neuronal entender una palabra en el contexto de las palabras que la rodean.} en Transformer y convolución de 1D. 
 
-%Dado que una secuencia de espectrograma mel es mucho más larga que su correspondiente secuencia de fonemas, para resolver el problema de la falta de coincidencia de longitud entre las dos secuencias, FastSpeech adopta un regulador de longitud que aumenta la muestra de la secuencia de fonemas de acuerdo con la duración del fonema (es decir, el número de espectrogramas mel a los que corresponde cada fonema) para que coincida con la longitud de la secuencia del espectrograma mel. El regulador se basa en un predictor de duración de fonemas, que predice la duración de cada fonema. 
-%En lugar de utilizar la arquitectura basada en codificador-atención-decodificador adoptada por la mayoría de las generaciones autorregresivas y no autorregresivas basadas en secuencia a secuencia.
 
 El modelo resuelve problemas existentes en modelos TTS antiguos de la siguiente forma:
 
@@ -96,7 +94,7 @@ Para el entrenamiento y la experimentación los parámetros del modelo siguen pr
 \subsubsection{Glow-TTS}
 A pesar de la ventaja, los modelos TTS paralelos no se pueden entrenar sin la guía de modelos TTS autorregresivos como alineadores externos. 
 
-Glow-TTS[\cite{kim2020glow}] es un modelo generativo basado en flujo para TTS paralelo que no requiere de ningún alineador externo. Al combinar las propiedades de los flujos y la programación dinámica, el el modelo busca la alineación monótona más probable entre el texto y la representación latente del habla en sí misma.
+Glow-TTS[\cite{kim2020glow}][\cite{glowtts}] es un modelo generativo basado en flujo para TTS paralelo que no requiere de ningún alineador externo. Al combinar las propiedades de los flujos y la programación dinámica, el el modelo busca la alineación monótona más probable entre el texto y la representación latente del habla en sí misma.
 La arquitectura del modelo consiste en un codificador que sigue la estructura del codificador de \textit{Transformer TTS} con pequeñas modificaciones, un predictor de duración, que tiene una estructura y configuración como la de FastSpeech, y finalmente un decodificador basado en flujo, que es la parte fundamental del modelo.
 
 Se demostró que hacer cumplir alineaciones monótonas fuerte permite un texto a voz robusto, que se generaliza a largas pronunciaciones, y el empleo de flujos generativos permite síntesis de voz rápida, diversa y controlable. Glow-TTS puede generar espectrogramas mel 15,7 veces más rápido que el modelo TTS autorregresivo,
@@ -131,7 +129,7 @@ WaveGrad[\cite{chen2020wavegrad}] es un modelo condicional para la generación d
 
 \subsection{VITS}
 
-\textit{Variational Inference with adversarial learning for end-to-end Text-to-Speech (VITS)}[\cite{kim2021conditional}] es un método TTS de extremo a extremo en paralelo[\cite{chen2019learning}]. Usando un Autocodificador Variacional se conectan los dos módulos de sistemas TTS: modelo acústico y VoCoder, a través de variables latentes para permitir el aprendizaje de extremo a extremo. 
+\textit{Variational Inference with adversarial learning for end-to-end Text-to-Speech (VITS)}[\cite{kim2021conditional}][\cite{vits}] es un método TTS de extremo a extremo en paralelo[\cite{chen2019learning}]. Usando un Autocodificador Variacional se conectan los dos módulos de sistemas TTS: modelo acústico y VoCoder, a través de variables latentes para permitir el aprendizaje de extremo a extremo. 
 
 El modelo VITS se describe principalmente en tres etapas: una formulación condicional de Autocodificador variacional; estimación de alineación derivada de la inferencia variacional; y entrenamiento adversarial para mejorar la calidad de la síntesis.
 
@@ -141,9 +139,9 @@ Para el codificador posterior se utilizan los bloques residuales no causales de 
 
 El codificador anterior consiste en un codificador de texto que procesa los fonemas de entrada, y un flujo de normalización que mejora la flexibilidad de la distribución anterior. El codificador de texto es un codificador transformador que utiliza representación posicional relativa en lugar de la codificación posicional absoluta. Mientras que el flujo de normalización es una pila de capas de acoplamiento afines [\cite{dinh2016density}] conformada por una pila de bloques residuales de WaveNet. 
 
-El decodificador es en esencia el generador HiFi-GAN V1[\cite{kong2020hifi}]. El modelo continua la arquitectura del discriminante multiperíodo discriminador propuesto en HiFi-GAN. El discriminante multiperíodo es una mezcla de subdiscriminadores Markovianos basados en ventanas, cada uno de los cuales opera en diferentes patrones periódicos de formas de onda de entrada.
+El decodificador es en esencia el generador HiFi-GAN V1[\cite{kong2020hifi}]. El modelo continua la arquitectura del discriminante multiperíodo discriminador propuesto en HiFi-GAN. El discriminante multiperíodo es una mezcla de subdiscriminadores basados en ventanas, cada uno de los cuales opera en diferentes patrones periódicos de formas de onda de entrada.
 
-El predictor de duración estocástica estima la distribución de la duración del fonema a partir de una entrada condicional. Para la parametrización eficiente del predictor de duración estocástica, son apilados bloques residuales con bloques dilatados y capas convolucionales separables en profundidad. También se aplican flujos de ranunas neuronales[\cite{durkan2019neural}], que toman la forma de transformaciones no lineales invertibles mediante el uso de ranuras monótonas racionales-cuadráticas, aplicadas a capas de acoplamiento. flujos de ranunas neuronales mejoran la expresividad de la transformación con un número de parámetros en comparación con los de uso común en capas de acoplamiento. 
+El predictor de duración estocástica estima la distribución de la duración del fonema a partir de una entrada condicional. Para la parametrización eficiente del predictor de duración estocástica, son apilados bloques residuales\footnote{Los bloques residuales son bloques de conexión salteada que aprenden funciones residuales con referencia a las entradas de la capa, en lugar de aprender funciones no referenciadas. Se introdujeron como parte de la arquitectura de las redes residuales[\cite{he2016deep}].} y capas convolucionales separables en profundidad\footnote{Mientras que la convolución estándar realiza el cálculo espacial y de canal en un solo paso, la convolución separable en profundidad divide el cálculo en dos pasos: la convolución en profundidad aplica un único filtro convolucional por cada canal de entrada y la convolución en punto se usa para crear una combinación lineal de la salida de la convolución en profundidad.}[\cite{chollet2017xception}]. También se aplican flujos de ranunas neuronales[\cite{durkan2019neural}], que toman la forma de transformaciones no lineales invertibles. 
 
 Una vez concluido el proceso de entrenamiento, y según la literatura al compararse este modelo de extremo a extremo con sistemas de dos etapas, a través de modelos preentrenados como son: Tacotron2 y Glow-TTS como modelos de primer escenario e HiFi-GAN como modelo de segundo escenario, se comprueba que VITS obtiene un habla que suena más natural y cercana a la realidad. Una evaluación humana subjetiva (puntuación de opinión media, o MOS), muestra que el modelo entrenado sobre LJ Speech\footnote{LJ Speech es un conjunto de datos de un solo hablante}[\cite{ljspeech}], supera a los mejores sistemas TTS disponibles públicamente y logra un MOS comparable a voces reales.
 
