--- a/thesis-main/document/MainMatter/Introduction.tex
+++ b/thesis-main/document/MainMatter/Introduction.tex
@@ -53,20 +53,11 @@ Entre las aplicaciones que hacen uso del TTS, se encuentran:
 \end{itemize}
 
 \section*{Problemática}
-Existe un conjunto de sistemas TTS que se enmarcan bajo una licencia de software libre:
-\begin{itemize}
-	\item Festival y Festvox
-	\item Plataforma MaryTTS
-	\item Sistema TTS
-	\item SV2TTS
-	\item Mozilla-TTS
-	\item COQUI -TTS
-\end{itemize}
+Existe un conjunto de sistemas TTS que se enmarcan bajo una licencia de software libre, entre las más populares se encuentran: Festival y Festvox, Plataforma MaryTTS, Sistema TTS, SV2TTS, Mozilla-TTS, y COQUI -TTS. A partir del estudio parcial de estas plataformas de código abierto utilizadas para el desarrollo de conversores de texto a voz, fue posible comprobar que la mayoría se encuentran basadas en la síntesis neuronal teniendo en cuenta que alcanza mejores resultados. Estas plataformas brindan modelos previamente entrenados para idiomas específicos como inglés, francés, alemán, etc. Sin embargo, muy pocas presentan un modelo en español, y las que lo hacen solo poseen uno, con acento de voz española, mexicana o voz neutra.\\
 
+DATYS, es una empresa de desarrollo de software, que como parte de sus soluciones requiere un sintetizador de voz en español con acento propio de nuestro país, como forma de representación de la identidad nacional. Este trabajo formará parte de un proyecto que consiste en el desarrollo del primer asistente de diálogo, virtual cubano. 
 
-A partir del estudio parcial de las plataformas de código abierto utilizadas para el desarrollo de conversores de texto a voz, fue posible comprobar que la mayoría se encuentran basadas en la síntesis neuronal teniendo en cuenta que alcanza mejores resultados. Estas plataformas brindan modelos previamente entrenados para idiomas específicos como inglés, francés, alemán, etc. Muy pocas presentan un modelo en español, y las que lo hacen solo poseen uno, con acento de voz española o voz neutra.\\
-
-DATYS, es una empresa de desarrollo de software, que como parte de sus soluciones requiere un sintetizador de voz en español con acento propio de nuestro país; esto formará parte de un proyecto que consiste en el desarrollo del primer asistente de diálogo, virtual cubano. 
+Teniendo en cuenta la hipótesis de que “es posible la creación de un sintetizador de voz en idioma Español adaptable a la voz cubana”, y conociendo la ausencia de sistemas de conversión de texto a voz con estas peculiaridades, es posible entonces exponer como objetivo general de esta tesis: ``dar los primeros pasos en el camino de obtener un modelo que dada una entrada de texto en español produzca una salida de voz artificial con acento cubano''.
 
 \section*{Objetivo}
 
